create jupyter files

--- a/jupyters/train_data_preparation.ipynb
+++ b/jupyters/train_data_preparation.ipynb
@@ -165,6 +165,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Сохряняем DataFrame в файл формата csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -192,6 +199,13 @@
    ],
    "source": [
     "df.label.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Открываем изображение из датасета и наносим bounding box согласно разметке"
    ]
   },
   {
@@ -239,7 +253,7 @@
     }
    ],
    "source": [
-    "row = df.iloc[13]\n",
+    "row = df.iloc[0]\n",
     "img = Image.open(f\"C:\\\\Users\\\\66615\\\\Desktop\\\\master's\\\\GQW\\\\OPIXray\\\\train\\\\train_image\\\\{row.file_name}\").convert('RGB')\n",
     "#img = Image.open(f\"path to image folder\\\\{row.file_name}\").convert('RGB')\n",
     "\n",
@@ -384,6 +398,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Рассчитываем координаты центра bounding box'a, его ширину и высоту"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
@@ -506,6 +527,13 @@
    ],
    "source": [
     "x_c_img, y_c_img, x1_box, y1_box, x2_box, y2_box, w_box_img, h_box_img"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Проверяем правильность рассчитанных координат"
    ]
   },
   {
