create jupyter files

--- a/jupyters/train_data_preparation.ipynb
+++ b/jupyters/train_data_preparation.ipynb
@@ -27,8 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "paths = glob.glob(\"C:\\\\Users\\\\66615\\\\Desktop\\\\master's\\\\GQW\\\\OPIXray\\\\train\\\\train_annotation\\\\*.txt\")\n",
-    "#paths = glob.glob(\"path to annotation txt files\")"
+    "paths = glob.glob(\"path to annotation txt files\")"
    ]
   },
   {
@@ -227,8 +226,7 @@
     }
    ],
    "source": [
-    "img = Image.open(\"C:\\\\Users\\\\66615\\\\Desktop\\\\master's\\\\GQW\\\\OPIXray\\\\train\\\\train_image\\\\009000.jpg\")\n",
-    "#img = Image.open(\"path to image folder\\\\009000.jpg\")\n",
+    "img = Image.open(\"path to image folder\\\\009000.jpg\")\n",
     "plt.figure(figsize=(10, 10))\n",
     "plt.imshow(img)\n",
     "plt.show()"
@@ -254,8 +252,7 @@
    ],
    "source": [
     "row = df.iloc[0]\n",
-    "img = Image.open(f\"C:\\\\Users\\\\66615\\\\Desktop\\\\master's\\\\GQW\\\\OPIXray\\\\train\\\\train_image\\\\{row.file_name}\").convert('RGB')\n",
-    "#img = Image.open(f\"path to image folder\\\\{row.file_name}\").convert('RGB')\n",
+    "img = Image.open(f\"path to image folder\\\\{row.file_name}\").convert('RGB')\n",
     "\n",
     "img = np.array(img)\n",
     "output = img.copy()\n",
@@ -463,8 +460,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = Image.open(\"C:\\\\Users\\\\66615\\\\Desktop\\\\master's\\\\GQW\\\\OPIXray\\\\train\\\\train_image\\\\009046.jpg\")\n",
-    "#img = Image.open(\"path to image folder\\\\009046.jpg\")\n",
+    "img = Image.open(\"path to image folder\\\\009046.jpg\")\n",
     "with open(f'.\\\\labels_train\\\\009046.txt') as f:\n",
     "    data = [float(x) for x in f.read().split()]"
    ]
